language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_call_argument_with_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  io.debug(#(1, 2, 3))\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  io.debug(#(1, 2, 3))
           ▔↑         
}


----- AFTER ACTION
import gleam/io

const value = #(1, 2, 3)

pub fn main() {
  io.debug(value)
}
