language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_bin_op.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let twelve = \"1\" <> \"2\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  let twelve = "1" <> "2"
                   ↑     
}


----- AFTER ACTION
const string = "1" <> "2"

pub fn main() {
  let twelve = string
}
