language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_bit_array.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let b = <<\"arr\":utf32>>\n}"
---
----- BEFORE ACTION
pub fn main() {
  let b = <<"arr":utf32>>
                  ▔▔▔▔▔▔↑
}


----- AFTER ACTION
const bit_array = <<"arr":utf32>>

pub fn main() {
  let b = bit_array
}
