language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_float.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = 3.1415\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = 3.1415
          ▔▔▔▔▔↑
}


----- AFTER ACTION
const float = 3.1415

pub fn main() {
  let c = float
}
