language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_int.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = 125\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = 125
          ▔▔↑
}


----- AFTER ACTION
const int = 125

pub fn main() {
  let c = int
}
