language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_list.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = [3.1415, 0.33333333]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = [3.1415, 0.33333333]
          ↑                   
}


----- AFTER ACTION
const floats = [3.1415, 0.33333333]

pub fn main() {
  let c = floats
}
