language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_nested_inside.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = #([1, 2, 3], [3, 2, 1])\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #([1, 2, 3], [3, 2, 1])
            ↑                    
}


----- AFTER ACTION
const ints = [1, 2, 3]

pub fn main() {
  let c = #(ints, [3, 2, 1])
}
