language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_string.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = \"constant\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = "constant"
          ↑         
}


----- AFTER ACTION
const string = "constant"

pub fn main() {
  let c = string
}
