language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_declaration_of_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let #(one, two, three) = #(\"one\", \"two\", \"three\")\n}"
---
----- BEFORE ACTION
pub fn main() {
  let #(one, two, three) = #("one", "two", "three")
                           ▔↑                      
}


----- AFTER ACTION
const value = #("one", "two", "three")

pub fn main() {
  let #(one, two, three) = value
}
